@startuml

title __ENTITIES's Class Diagram__\n

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.AccessToken {
          ~ isAdminToken : boolean
          - expiresOn : long
          - id : int
          - resourceId : UUID
          - value : UUID
          + AccessToken()
          + AccessToken()
          {static} + builder()
          + equals()
          + getExpiresOn()
          + getId()
          + getResourceId()
          + getValue()
          + hashCode()
          + isAdminToken()
          + setAdminToken()
          + setExpiresOn()
          + setId()
          + setResourceId()
          + setValue()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.AccessToken.AccessTokenBuilder {
          - expiresOn : long
          - id : int
          - isAdminToken : boolean
          - resourceId : UUID
          - value : UUID
          + build()
          + expiresOn()
          + id()
          + isAdminToken()
          + resourceId()
          + toString()
          + value()
          ~ AccessTokenBuilder()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Phone {
          - uniqueId : String
          - uuid : UUID
          + Phone()
          + Phone()
          {static} + builder()
          + equals()
          + getUniqueId()
          + getUuid()
          + hashCode()
          + setUniqueId()
          + setUuid()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Phone.PhoneBuilder {
          - uniqueId : String
          - uuid : UUID
          + build()
          + toString()
          + uniqueId()
          + uuid()
          ~ PhoneBuilder()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Position {
          - creationTimestamp : long
          - id : int
          - latitude : double
          - longitude : double
          + Position()
          + Position()
          {static} + builder()
          + equals()
          + getCreationTimestamp()
          + getId()
          + getLatitude()
          + getLongitude()
          + getPhoneId()
          + hashCode()
          + setCreationTimestamp()
          + setId()
          + setLatitude()
          + setLongitude()
          + setPhoneId()
          + toString()
          # canEqual()
      }
    }
  }
  

  namespace com.anto.gpstrack {
    namespace entities {
      class com.anto.gpstrack.entities.Position.PositionBuilder {
          - creationTimestamp : long
          - id : int
          - latitude : double
          - longitude : double
          + build()
          + creationTimestamp()
          + id()
          + latitude()
          + longitude()
          + phoneId()
          + toString()
          ~ PositionBuilder()
      }
    }
  }
  

  com.anto.gpstrack.entities.AccessToken +-down- com.anto.gpstrack.entities.AccessToken.AccessTokenBuilder
  com.anto.gpstrack.entities.Phone +-down- com.anto.gpstrack.entities.Phone.PhoneBuilder
  com.anto.gpstrack.entities.Position o-- com.anto.gpstrack.entities.Phone : phoneId
  com.anto.gpstrack.entities.Position +-down- com.anto.gpstrack.entities.Position.PositionBuilder
  com.anto.gpstrack.entities.Position.PositionBuilder o-- com.anto.gpstrack.entities.Phone : phoneId


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
